--- a/app/src/main/res/layout/content_calc_meal.xml
+++ b/app/src/main/res/layout/content_calc_meal.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_calc_meal">
 
+    <include layout="@layout/meal_food_item" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_calc_meal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="@android:color/darker_gray"
         tools:listitem="@layout/meal_food_item" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
