--- a/app/src/main/res/layout/meal_food_item.xml
+++ b/app/src/main/res/layout/meal_food_item.xml
@@ -2,6 +2,7 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/meal_foodcard"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:focusable="true"
