--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,16 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_exportdb"
+        android:orderInCategory="200"
+        android:title="@string/action_exportdb"
+        app:showAsAction="never" />
+    <!--
+    <item
+        android:id="@+id/action_importdb"
+        android:orderInCategory="300"
+        android:title="@string/action_importdb"
+        app:showAsAction="never" />
+    -->
 </menu>
